Revision history for Dist-Zilla-Plugin-GitHubREADME-Badge

{{$NEXT}}

0.33  2021-01-04 08:39:08 CST
        - cpants minor fix: The link to the image should be https (reneeb)

0.32  2020-08-21 20:37:30 CST
        - Fix min perl version (JRaspass)

0.31  2020-08-20 08:07:39 CST
        - add cpancover badge (reneeb)

0.30  2019-11-22 12:33:09 CST
        - Update CPANTS URL (oalders)

0.29  2019-10-03 22:11:47 CST
        - add github actions badge (skaji)

0.28  2019-06-10 10:33:35 CST
        - Fix phase.t on Windows. (genio)

0.27  2018-06-17 11:16:23 CST
        - add travis-ci.com badge

0.26  2018-04-04 20:37:17 CST
        - Fix github url for docker badge (powerman)

0.25  2018-04-04 12:02:43 CST
        - Fix docker badges to use lower case (powerman)

0.24  2018-04-04 08:05:10 CST
        - Added support for Docker automated and build badges (powerman)

0.23  2018-02-18 10:19:37 CST
        - add a filemunge phase (yanick)

0.22  2017-04-10 08:26:03 CST
        - no code changes, release

0.21  2017-04-10 08:22:37 CST
        - support AppVeyor badge (stphnlyd)

0.20  2016-11-10 16:00:06 CST
        - dummy, didn't do git pull

0.19  2016-11-10 15:56:49 CST
        - many improvements from paultcochrane (Paul Cochrane)

0.18  2016-09-22 19:17:28 CST
        - gitlab support (Thorsten Klein)

0.17  2016-07-07 15:09:08 CST
        - add codecov

0.16  2015-10-02 11:44:52 CST
        - use svg for coveralls and gitter.im (Randy Stauner)

0.15  2015-10-01 13:55:15 CST
        - add 'phase' attribute to enable after-release instead of after-build (Randy Stauner)
        - add tests and small bug fixes (Randy Stauner)

0.14  2015-04-29 18:04:04 CST
        - small url fixes from Mishin

0.13  2015-04-27 09:17:02 CST
        - no code changes

0.12  2015-04-27 09:15:11 CST
        - more tags from mishin

0.11  2015-04-09 08:46:36 CST
        - fixes from mishin

0.10  2015-04-06 16:35:09 CST
        - update POD

0.09  2015-04-06 16:32:46 CST